v1.0.0/modules/schema/pages/class/IntegerQuantity.adoc
= `IntegerQuantity`
:toclevels: 4


+++Quantity with integer value and associated unit information.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:IntegerQuantity`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* *`IntegerQuantity`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<multiplier,`multiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Unit multiplier of this quantity.+++

| <<unit,`unit`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++Unit of this quantity.+++

| <<value,`value`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Value of this quantity.+++
|===

'''


//[discrete]
[#multiplier]
=== `multiplier`
+++Unit multiplier of this quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IntegerQuantity.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]


|===

//[discrete]
[#unit]
=== `unit`
+++Unit of this quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IntegerQuantity.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]


|===

//[discrete]
[#value]
=== `value`
+++Value of this quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IntegerQuantity.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===


